data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_685.wast
;; 6. **Test Description:**    Implement a function returning a conditionally-derived value used in a `br_if` where incorrect stack-polymorphism causes all branches to be taken as operand mismanagement leads to an improper conditional state.

(assert_invalid
  (module
    (func $incorrect-stack-polymorphism (result i32)
      (local $cond i32)
      (i32.const 10)
      (local.set $cond)
      (block (result i32)
        (br_if 0 (local.get $cond))
      )
      (i32.const 1)
      (return)
    )
  )
  "type mismatch"
)